--- a/src/assets/scss/views/search.scss
+++ b/src/assets/scss/views/search.scss
@@ -120,16 +120,12 @@
   
       > i {
         display: inline-flex;
-        width: 1rem;
-        height: 1rem;
+        margin-right: 0.2rem;
         border-radius: 50%;
         background-color: $grey12;
-        font-size: 0.85rem;
         color: $black02;
         text-shadow: none;
         box-shadow: inherit;
-        align-items: center;
-        justify-content: center;
       }
     }
   
