화면단 작업중

--- a/src/assets/scss/basics/util.scss
+++ b/src/assets/scss/basics/util.scss
@@ -91,6 +91,66 @@
   }
 }
 
+.ml {
+  &--0 {
+    margin-left: 0 !important;
+  }
+
+  &--5 {
+    margin-left: 0.25rem !important;
+  }
+
+  &--10 {
+    margin-left: 0.5rem !important;
+  }
+
+  &--15 {
+    margin-left: 0.75rem !important;
+  }
+
+  &--20 {
+    margin-left: 1rem !important;
+  }
+
+  &--25 {
+    margin-left: 1.25rem !important;
+  }
+
+  &--30 {
+    margin-left: 1.5rem !important;
+  }
+}
+
+.mr {
+  &--0 {
+    margin-right: 0 !important;
+  }
+
+  &--5 {
+    margin-right: 0.25rem !important;
+  }
+
+  &--10 {
+    margin-right: 0.5rem !important;
+  }
+
+  &--15 {
+    margin-right: 0.75rem !important;
+  }
+
+  &--20 {
+    margin-right: 1rem !important;
+  }
+
+  &--25 {
+    margin-right: 1.25rem !important;
+  }
+
+  &--30 {
+    margin-right: 1.5rem !important;
+  }
+}
+
 .mb {
   &--0 {
     margin-bottom: 0 !important;
@@ -148,6 +208,66 @@
 
   &--30 {
     padding-top: 1.5rem !important;
+  }
+}
+
+.pl {
+  &--0 {
+    padding-left: 0 !important;
+  }
+
+  &--5 {
+    padding-left: 0.25rem !important;
+  }
+
+  &--10 {
+    padding-left: 0.5rem !important;
+  }
+
+  &--15 {
+    padding-left: 0.75rem !important;
+  }
+
+  &--20 {
+    padding-left: 1rem !important;
+  }
+
+  &--25 {
+    padding-left: 1.25rem !important;
+  }
+
+  &--30 {
+    padding-left: 1.5rem !important;
+  }
+}
+
+.pr {
+  &--0 {
+    padding-right: 0 !important;
+  }
+
+  &--5 {
+    padding-right: 0.25rem !important;
+  }
+
+  &--10 {
+    padding-right: 0.5rem !important;
+  }
+
+  &--15 {
+    padding-right: 0.75rem !important;
+  }
+
+  &--20 {
+    padding-right: 1rem !important;
+  }
+
+  &--25 {
+    padding-right: 1.25rem !important;
+  }
+
+  &--30 {
+    padding-right: 1.5rem !important;
   }
 }
 
