--- a/src/assets/scss/views/view.scss
+++ b/src/assets/scss/views/view.scss
@@ -96,6 +96,12 @@
                   font-size: 1rem;
                }
             }
+
+            pre {
+               + pre {
+                  margin-top: 1rem;
+               }
+            }
          }
    
          &__like {
