--- a/src/assets/scss/components/post-reply-list.scss
+++ b/src/assets/scss/components/post-reply-list.scss
@@ -97,8 +97,8 @@
 
     &__toggle {
       position: absolute;
-      top: -($size - 0.5rem);
-      right: -($size - 0.5rem);
+      top: 0.5rem;
+      right: 0.5rem;
 
       &-list {
         display: none;
@@ -142,23 +142,13 @@
     &__btn {
       &--refresh {
         min-width: 0;
-        width: 1.3rem;
-        height: 1.3rem;
-        line-height: 1.3rem;
+        width: 1.4rem;
+        height: 1.4rem;
+        line-height: 1.4rem;
         margin-left: 0.5rem;
         padding: 0;
         border-radius: 50%;
-        font-size: 0.85rem;
-        text-shadow: none;
-        transition: all 0.1s;
-
-        @media (min-width: $min-large-width) {
-          &:hover {
-            background-color: $main-color;
-            color: $grey12;
-            text-shadow: rgba(0, 0, 0, 0.8) 1px 1px 0.1em;
-          }
-        }
+        font-size: 0.8rem;
       }
 
       &--toggle {
@@ -176,10 +166,9 @@
         min-width: 0;
         width: 100%;
         height: 1.4rem;
-        background-color: $grey12;
-        font-size: 0.85rem;
+        border-radius: 50%;
+        font-size: 0.8rem;
         line-height: 1;
-        text-shadow: none;
         justify-content: center;
         align-items: center;
 
@@ -263,7 +252,7 @@
       background-color: $grey07;
       font-size: 0.85rem;
 
-      & + & {
+      + .post__reply__list {
         border-top: 1px solid $grey05;
       }
 
@@ -282,12 +271,6 @@
           color: $black02;
           -webkit-font-smoothing: antialiased;
         }
-      }
-
-      &-frm {
-        position: relative;
-        width: 100%;
-        box-sizing: border-box;
       }
 
       p {
