화면단 작업중

--- a/src/assets/scss/components/sidebar.scss
+++ b/src/assets/scss/components/sidebar.scss
@@ -79,6 +79,7 @@
           &-text {
             overflow: hidden;
             width: calc(100% - 2rem);
+            min-height: 1.3rem;
             caret-color: auto;
             cursor: text;
           }
