--- a/src/assets/scss/basics/input.scss
+++ b/src/assets/scss/basics/input.scss
@@ -2,6 +2,10 @@
   &-wrapper {
     height: 100%;
 
+    &--inline-block {
+      display: inline-block;
+    }
+
     & + & {
       margin-top: 0.25rem;
     }
