--- a/src/assets/scss/components/post-reply-list.scss
+++ b/src/assets/scss/components/post-reply-list.scss
@@ -55,10 +55,6 @@
           flex-wrap: wrap;
           align-items: center;
           gap: 0.7rem;
-
-          label {
-            margin-right: 0;
-          }
         }
       }
 
@@ -90,7 +86,6 @@
       }
 
       &-depth {
-        display: none;
         margin-top: 0.7rem;
       }
     }
@@ -101,7 +96,6 @@
       right: 0.5rem;
 
       &-list {
-        display: none;
         position: absolute;
         top: calc(100% + 0.25rem);
         right: 0;
@@ -164,17 +158,13 @@
       &--show {
         display: inline-flex;
         min-width: 0;
-        width: 100%;
+        width: 1.4rem;
         height: 1.4rem;
         border-radius: 50%;
         font-size: 0.8rem;
         line-height: 1;
         justify-content: center;
         align-items: center;
-
-        @media (min-width: $min-medium-width) {
-          width: 1.4rem;
-        }
       }
 
       &--reset {
@@ -257,19 +247,27 @@
       }
 
       &:not([data-depth="1"]) {
-        padding-left: 3rem;
+        padding-left: 2.7rem;
         background-color: $grey02;
 
         &:after {
           content: "\e981";
           position: absolute;
           top: 1rem;
-          left: 1.5rem;
+          left: 1.3rem;
           font-family: $icon-font;
           font-size: 1rem;
           line-height: 1;
           color: $black02;
           -webkit-font-smoothing: antialiased;
+        }
+
+        @media (min-width: $min-minimal-width) {
+          padding-left: 3rem;
+
+          &:after {
+            left: 1.5rem;
+          }
         }
       }
 
@@ -349,6 +347,14 @@
       }
     }
 
+    &__reg-date {
+      width: calc(100% - 2rem);
+
+      @media (min-width: $min-minimal-width) {
+        width: auto;
+      }
+    }
+
     &__info {
       display: flex;
       min-height: 1.6rem;
@@ -358,17 +364,10 @@
       gap: 0.6rem;
 
       &-inner {
-        display: flex;
-        width: 100%;
-        margin-top: 0.2rem;
+        display: inline-flex;
         align-items: center;
         flex-wrap: wrap;
         gap: 0.6rem;
-
-        @media (min-width: $min-medium-width) {
-          width: auto;
-          margin-top: 0;
-        }
       }
 
       &__author {
@@ -378,13 +377,7 @@
       }
 
       p {
-        display: block;
-        width: 100%;
-
-        @media (min-width: $min-medium-width) {
-          display: inline-flex;
-          width: auto;
-        }
+        word-break: break-all;
 
         + p {
           @media (min-width: $min-medium-width) {
