--- a/src/assets/scss/components/satisfaction.scss
+++ b/src/assets/scss/components/satisfaction.scss
@@ -63,20 +63,24 @@
         @media (min-width: $min-small-width) {
           justify-content: flex-start;
         }
+
+        > .input-wrapper {
+          width: calc(100% - 2rem);
+
+          @media (min-width: $min-standard-width) {
+            width: 30rem;
+          }
+        }
       }
     }
   
     &__comment {
-      width: calc(100% - 2rem);
+      width: 100%;
       height: 2rem;
       border: 0;
       border-bottom: 1px solid $grey06;
       background-color: transparent;
       line-height: 2rem;
-  
-      @media (min-width: $min-standard-width) {
-        width: 30rem;
-      }
     }
   
     &__btn {
