--- a/src/assets/scss/components/form.scss
+++ b/src/assets/scss/components/form.scss
@@ -1,10 +1,22 @@
 .form-field {
   &-error {
     display: block;
-    margin-bottom: 0.5rem;
+    padding: 0.3rem;
     font-size: 0.75rem;
     text-align: left;
     color: $sub-color03;
+    box-sizing: border-box;
+
+    &.form-field-error--tooltip {
+      position: absolute;
+      top: -2.3rem;
+      left: 0;
+      z-index: 1;
+      min-width: 11.5rem;
+      border-radius: 0.3rem;
+      background-color: $grey12;
+      box-shadow: rgba(0, 0, 0, 0.1) 0 0.25rem 0.75rem;
+    }
 
     &:before {
       content: "*";
