--- a/src/assets/scss/views/search.scss
+++ b/src/assets/scss/views/search.scss
@@ -21,10 +21,33 @@
         height: $search-field-height;
         padding-left: $search-option-width;
       }
+
+      .input-wrapper:nth-of-type(1) {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: $search-option-width-responsive;
+        height: 100%;
+
+        @media (min-width: $min-small-width) {
+          width: $search-option-width;
+        }
+      }
+
+      .input-wrapper:nth-of-type(2) {
+        width: calc(100% - 2rem);
+        height: 100%;
+        box-sizing: border-box;
+
+        @media (min-width: $min-small-width) {
+          width: calc(100% - #{$search-option-width - $search-field-width});
+          padding-left: 1.5rem;
+        }
+      }
   
       input[type="search"] {
         display: inline-block;
-        width: calc(100% - 2rem);
+        width: 100%;
         height: 100%;
         padding: 0 0.5rem;
         border: 0;
@@ -37,8 +60,6 @@
         }
   
         @media (min-width: $min-small-width) {
-          width: calc(100% - #{$search-option-width - $search-field-width});
-          padding-left: 1.5rem;
           font-size: 1rem;
         }
       }
@@ -49,10 +70,7 @@
     }
   
     &__option {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: $search-option-width-responsive;
+      width: 100%;
       height: 100%;
       border: 0;
       background: none;
@@ -61,7 +79,6 @@
       color: $black05;
   
       @media (min-width: $min-small-width) {
-        width: $search-option-width;
         font-size: 0.9rem;
       }
     }
