--- a/src/assets/scss/views/guestbook.scss
+++ b/src/assets/scss/views/guestbook.scss
@@ -214,7 +214,7 @@
           gap: 0;
         }
   
-        span {
+        > span {
           display: block;
           width: 100%;
           position: relative;
@@ -235,16 +235,6 @@
                 width: 1px;
                 height: 0.6rem;
                 background-color: $grey05;
-              }
-            }
-          }
-  
-          strong {
-            &:first-child {
-              display: block;
-  
-              @media (min-width: $min-mini-width) {
-                display: inline;
               }
             }
           }
