--- a/src/assets/scss/basics/base.scss
+++ b/src/assets/scss/basics/base.scss
@@ -148,15 +148,6 @@ input {
       }
     }
   }
-
-  &[readonly] {
-    background-color: $grey02;
-  }
-
-  &[disabled] {
-    background-color: $grey02;
-    cursor: not-allowed;
-  }
 }
 
 label {
@@ -179,6 +170,15 @@ select {
   line-height: $input-height;
   vertical-align: middle;
   box-sizing: border-box;
+
+  &.is--readonly {
+    background-color: $grey02;
+  }
+
+  &.is--disabled {
+    background-color: $grey02;
+    cursor: not-allowed;
+  }
 }
 
 textarea {
@@ -194,6 +194,15 @@ textarea {
 input,
 textarea {
   caret-color: auto;
+
+  &[readonly] {
+    background-color: $grey02;
+  }
+
+  &[disabled] {
+    background-color: $grey02;
+    cursor: not-allowed;
+  }
 }
 
 iframe {
