--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -123,27 +123,21 @@
           justify-content: center;
         }
       }
-  
-      &--autologout {
-        display: inline-flex;
-        font-size: 1.1rem;
-        align-items: center;
-        gap: 0.5rem;
-  
-        button {
+
+      &--notice {
+        &-count {
           display: inline-flex;
-          min-width: 0;
-          height: auto;
-          padding: 0.1rem;
-          border-radius: 50%;
-          background-color: $grey12;
-          font-size: 0.8rem;
-          line-height: 1;
-          color: $black;
-          text-shadow: none;
-          box-shadow: rgba(0, 0, 0, 0.8) 1px 1px 0.1em;
           justify-content: center;
           align-items: center;
+          position: absolute;
+          top: -0.5rem;
+          right: 0;
+          width: 1rem;
+          height: 1rem;
+          border-radius: 50%;
+          background-color: $main-color;
+          font-size: 0.6rem;
+          box-sizing: border-box;
         }
       }
     }
