--- a/src/assets/scss/components/notice.scss
+++ b/src/assets/scss/components/notice.scss
@@ -1,59 +1,32 @@
-.masthead {
-  &__util {
-    &--notice {
-      display: inline-flex;
-      z-index: 1;
-      height: 1.8rem;
-      justify-content: center;
-      align-items: center;
+.notice__wrapper:deep {
+  position: absolute;
+  top: calc(100% + #{$layout-margin});
+  right: 0;
+  z-index: 2;
+  width: 100%;
+  padding: 1rem;
+  background-color: $grey07;
+  box-shadow: rgba(0, 0, 0, 0.2) 0.2rem 0.2rem 1rem 0;
+  font-size: 0.9rem;
+  text-shadow: none;
+  box-sizing: border-box;
 
-      &__count {
-        display: flex;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        font-weight: 700;
-        font-size: 0.7rem;
-        letter-spacing: -0.03em;
-        color: $black03;
-        text-shadow: none;
-        justify-content: center;
-        align-items: center;
-      }
-    }
+  @media (min-width: $min-medium-width) {
+    width: 36.5rem;
   }
 
-  &__util {
-    &__notice {
-      display: none;
-      position: absolute;
-      top: calc(100% + #{$layout-margin});
-      right: 0;
-      z-index: 2;
-      width: 100%;
-      padding: 1rem;
-      background-color: $grey07;
-      box-shadow: rgba(0, 0, 0, 0.2) 0.2rem 0.2rem 1rem 0;
-      font-size: 0.9rem;
-      text-shadow: none;
-      box-sizing: border-box;
+  @media (min-width: $min-standard-width) {
+    left: $layout-margin;
+  }
 
-      @media (min-width: $min-medium-width) {
-        width: 36.5rem;
-      }
-
-      @media (min-width: $min-standard-width) {
-        left: $layout-margin;
-      }
-
+  .notice {
+    &__util {
       &__tabs {
         display: flex;
         width: 100%;
         margin-bottom: 0.5rem;
         flex-wrap: wrap;
-
+    
         button {
           display: block;
           position: relative;
@@ -62,13 +35,12 @@
           background-color: transparent;
           font-weight: 700;
           font-size: 0.85rem;
-          flex: 1 1 auto;
           box-sizing: border-box;
-
+    
           @media (min-width: $min-medium-width) {
-            width: 25%;
+            width: 20%;
           }
-
+    
           &.active {
             background-color: $main-color;
             color: $grey12;
@@ -81,21 +53,53 @@
       &__cont {
         width: 100%;
         padding: 0.7rem 0;
-
+    
         &-info {
-          margin-bottom: 1rem;
+          .checkbox-wrapper {
+            margin-top: 0;
+          }
         }
-
+    
         .cont {
-          display: none;
           position: relative;
-
+    
           &.active {
             display: block;
           }
         }
+    
+        .notice-count {
+          font-weight: 700;
+    
+          &__wrapper {
+            margin: 0.5rem 0;
+            font-size: 0.8rem;
+            vertical-align: middle;
+    
+            @media (min-width: $min-minimal-width) {
+              display: inline-block;
+              margin: 0.3rem 0;
+            }
+          }
+        }
+    
+        .btn-notice {
+          &-check {
+            display: inline-flex;
+            min-width: 0;
+            height: 1.1rem;
+            line-height: 1.1rem;
+            margin-left: 0.5rem;
+            margin-right: 0.8rem;
+            padding: 0 0.25rem;
+            font-weight: 700;
+            font-size: 0.7rem;
+            align-items: center;
+            gap: 0.25rem;
+          }
+        }
 
-        .more {
+        .btn-more {
           display: flex;
           position: absolute;
           bottom: -0.7rem;
@@ -113,108 +117,45 @@
           justify-content: center;
           align-items: center;
         }
-
-        .notice-count {
-          font-weight: 700;
-
-          &__wrapper {
-            margin: 0.5rem 0;
-            font-size: 0.8rem;
-            vertical-align: middle;
-
-            @media (min-width: $min-minimal-width) {
-              display: inline-block;
-              margin: 0.3rem 0;
-            }
-          }
-        }
-
-        .btn-notice {
-          &-check {
-            display: inline-flex;
-            min-width: 0;
-            height: 1.1rem;
-            line-height: 1.1rem;
-            margin-right: 0.8rem;
-            padding: 0 0.25rem;
-            background-color: $grey12;
-            font-weight: 700;
-            font-size: 0.7rem;
-            text-shadow: none;
-            align-items: center;
-            gap: 0.25rem;
-          }
-        }
-
+    
         ul {
           overflow: auto;
           max-height: 14.3rem;
-          margin: 0;
+          margin: 1rem 0 0 0;
           padding: 0.7rem;
           background-color: $grey02;
           list-style: none;
           box-sizing: border-box;
-
-          // &::-webkit-scrollbar {
-          //    width: 14px;
-          //    -webkit-appearance: none;
-
-          //    &-thumb {
-          //       background-color: $grey09;
-
-          //       &:hover {
-          //          background-color: $grey11;
-          //       }
-
-          //       &:active {
-          //          background-color: $black02;
-          //       }
-          //    }
-
-          //    &-track {
-          //       background-image: linear-gradient(to bottom, rgba(216,216,216,0.3), rgba(185,185,185,0.3));
-          //    }
-          // }
         }
-
+    
         li {
-          display: flex;
           position: relative;
           font-size: 0.8rem;
           line-height: 1.5;
-          flex-wrap: wrap;
-          gap: 0 0.3rem;
-
-          &:not(.no-data) {
-            padding-left: 1.2rem;
-          }
-
-          &.no-data {
-            justify-content: center;
-          }
-
+    
           + li {
             margin-top: 1.1rem;
           }
-
+    
           .only-input {
             position: absolute;
             top: 0;
             left: 0;
           }
         }
-
+    
         a {
           color: $sub-color03;
           text-decoration: underline;
         }
-
+    
         input {
-          &[type='checkbox'] {
+          &[type="checkbox"] {
             + label {
+              margin-right: 0.2rem;
               padding-left: 1.15rem;
               font-size: 0.8rem;
-
+    
               &:before {
                 width: 0.75rem;
                 height: 0.75rem;
@@ -224,11 +165,27 @@
             }
           }
         }
-
+    
         .info {
-          display: block;
-          width: 100%;
+          margin-left: 0.25rem;
+          font-size: 0.7rem;
         }
+      }
+
+      &__count {
+        display: flex;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        font-weight: 700;
+        font-size: 0.7rem;
+        letter-spacing: -0.03em;
+        color: $black03;
+        text-shadow: none;
+        justify-content: center;
+        align-items: center;
       }
     }
   }
