--- a/src/assets/scss/views/view.scss
+++ b/src/assets/scss/views/view.scss
@@ -15,6 +15,7 @@
          }
          
          &__body {
+            min-height: 25rem;
             margin-bottom: 4rem;
             font-size: 0.95rem;
             line-height: 1.9;
