--- a/src/assets/scss/basics/input.scss
+++ b/src/assets/scss/basics/input.scss
@@ -7,8 +7,9 @@
       display: inline-block;
     }
 
-    & + & {
-      margin-top: 0.25rem;
+    & + &,
+    & + .input-label {
+      margin-top: 0.5rem;
     }
   }
 
