--- a/src/assets/scss/views/guestbook.scss
+++ b/src/assets/scss/views/guestbook.scss
@@ -46,32 +46,52 @@
       }
   
       &__inputs {
-        margin-top: 1rem;
         @include clearfix;
+        
+        @media (min-width: $min-small-width) {
+          margin-top: 1rem;
+        }
       }
 
       &__input-box {
-        display: flex;
+        display: inline-flex;
+        width: 100%;
         margin-top: 0.7rem;
         font-size: 0.85rem;
         vertical-align: top;
         flex-wrap: wrap;
-        gap: 0.35rem;
+        gap: 0.7rem;
 
-        @media (min-width: $min-medium-width) {
-          display: inline-flex;
+        .input-wrapper {
+          width: calc(100% - 3.95rem);
+
+          @media (min-width: $min-small-width) {
+            width: auto;
+          }
+        }
+
+        @media (min-width: $min-small-width) {
+          width: auto;
           margin-top: 0;
           margin-right: 0.7rem;
-          gap: 0.7rem;
         }
       }
   
       &__btns {
-        margin-top: 1rem;
+        margin-top: 0.7rem;
   
-        @media (min-width: $min-medium-width) {
+        @media (min-width: $min-small-width) {
           float: right;
           margin-top: 0;
+        }
+      }
+
+      &__label {
+        width: 3.25rem;
+        padding-top: 0.25rem;
+
+        @media (min-width: $min-small-width) {
+          min-width: 0;
         }
       }
     }
@@ -79,25 +99,21 @@
     &__input {
       display: block;
       width: 100%;
+      
+      @media (min-width: $min-small-width) {
+        width: 6rem;
+      }
   
       @media (min-width: $min-medium-width) {
-        width: 8rem;
+        width: 7rem;
       }
     }
   
     &__btn {
-      &--reset {
-        width: calc(50% - 0.35rem);
-  
-        @media (min-width: $min-medium-width) {
-          width: auto;
-        }
-      }
-  
       &--write {
-        width: calc(50% - 0.35rem);
-  
-        @media (min-width: $min-medium-width) {
+        width: 100%;
+        
+        @media (min-width: $min-small-width) {
           width: auto;
         }
       }
@@ -149,10 +165,13 @@
         &-write {
           display: block;
           width: 100%;
+        
+          @media (min-width: $min-small-width) {
+            width: auto;
+          }
   
           @media (min-width: $min-medium-width) {
             display: inline-block;
-            width: auto;
           }
         }
       }
@@ -385,31 +404,59 @@
         padding-right: 1.5rem;
         font-size: 0.85rem;
       }
+
+      &__input-box {
+        display: inline-flex;
+        gap: 0.7rem;
+        width: 100%;
+        height: 100%;
+        margin-top: 0.7rem;
+
+        .input-wrapper {
+          width: calc(100% - 3.95rem);
+
+          @media (min-width: $min-small-width) {
+            width: auto;
+          }
+        }
+
+        @media (min-width: $min-small-width) {
+          width: auto;
+          margin-top: 0;
+          margin-right: 0.7rem;
+        }
+      }
   
       &__btns {
-        display: flex;
-        width: 100%;
-        flex-wrap: wrap;
-        gap: 0.7rem;
-  
-        @media (min-width: $min-medium-width) {
+        @include clearfix;
+        
+        @media (min-width: $min-small-width) {
           margin-top: 0.7rem;
-        }
-  
-        &-inner {
-          width: 100%;
-          height: 100%;
-  
-          @media (min-width: $min-medium-width) {
-            display: flex;
-            width: auto;
-            gap: 0.7rem;
-          }
         }
   
         label {
           display: block;
           font-size: 0.85rem;
+        }
+      }
+
+      &__label {
+        width: 3.25rem;
+        padding-top: 0.25rem;
+
+        @media (min-width: $min-small-width) {
+          min-width: 0;
+        }
+      }
+
+      &__write {
+        &__btns {
+          margin-top: 0.7rem;
+    
+          @media (min-width: $min-small-width) {
+            float: right;
+            margin-top: 0;
+          }
         }
       }
     }
