--- a/src/assets/scss/components/post-reply-list.scss
+++ b/src/assets/scss/components/post-reply-list.scss
@@ -22,29 +22,6 @@
       &__inputs,
       &-to {
         @include clearfix;
-
-        label {
-          display: inline-flex;
-          width: 100%;
-          font-size: 0.85rem;
-          flex-wrap: wrap;
-          align-items: center;
-          gap: 0.35rem;
-
-          + label {
-            margin-top: 0.7rem;
-
-            @media (min-width: $min-medium-width) {
-              margin-top: 0;
-            }
-          }
-
-          @media (min-width: $min-medium-width) {
-            width: auto;
-            margin-right: 0.7rem;
-            gap: 0.7rem;
-          }
-        }
       }
 
       &-to {
@@ -59,7 +36,19 @@
       }
 
       &__inputs {
-        margin-top: 1rem;
+        .input-wrapper {
+          display: inline-block;
+          vertical-align: middle;
+  
+          + .input-wrapper {
+            margin-top: 0;
+            margin-left: 0.6rem;
+          }
+        }
+
+        @media (min-width: $min-small-width) {
+          margin-top: 1rem;
+        }
 
         &-inner {
           width: 100%;
@@ -73,20 +62,67 @@
         }
       }
 
+      &__input-box {
+        display: inline-flex;
+        width: 100%;
+        margin-top: 0.7rem;
+        font-size: 0.85rem;
+        vertical-align: top;
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 0.7rem;
+    
+        .input-wrapper {
+          width: calc(100% - 3.95rem);
+    
+          @media (min-width: $min-small-width) {
+            width: auto;
+          }
+        }
+    
+        @media (min-width: $min-small-width) {
+          width: auto;
+          margin-top: 0;
+          margin-right: 0.7rem;
+        }
+      }
+
       &__btns {
         display: flex;
-        margin-top: 1rem;
+        margin-top: 0.7rem;
         flex-wrap: wrap;
         gap: 0.5rem;
 
-        @media (min-width: $min-medium-width) {
+        @media (min-width: $min-small-width) {
           float: right;
           margin-top: 0;
         }
       }
 
+      &__label {
+        width: 3.25rem;
+
+        @media (min-width: $min-small-width) {
+          min-width: 0;
+          padding-top: 0.25rem;
+        }
+      }
+
       &-depth {
         margin-top: 0.7rem;
+      }
+    }
+
+    &__input {
+      display: block;
+      width: 100%;
+      
+      @media (min-width: $min-small-width) {
+        width: 6rem;
+      }
+  
+      @media (min-width: $min-medium-width) {
+        width: 7rem;
       }
     }
 
@@ -170,20 +206,13 @@
       }
 
       &--write {
-        min-width: 0;
-        width: calc(50% - 0.35rem);
-        height: 1.7rem;
-        line-height: 1.7rem;
-        font-size: 0.85rem;
-        background-color: $main-color;
-        color: $grey12;
+        width: 100%;
 
         &-depth {
           width: 100%;
         }
 
-        @media (min-width: $min-medium-width) {
-          min-width: 4.3rem;
+        @media (min-width: $min-small-width) {
           width: auto;
         }
       }
@@ -381,28 +410,6 @@
               background-color: $grey05;
             }
           }
-        }
-      }
-    }
-
-    &__write__inputs {
-      .input-wrapper {
-        display: inline-block;
-        vertical-align: middle;
-
-        + .input-wrapper {
-          margin-top: 0;
-          margin-left: 0.6rem;
-        }
-      }
-
-      .input-field {
-        width: 100%;
-        height: 1.7rem;
-        line-height: 1.7rem;
-
-        @media (min-width: $min-medium-width) {
-          width: 8rem;
         }
       }
     }
