--- a/src/assets/scss/views/guestbook.scss
+++ b/src/assets/scss/views/guestbook.scss
@@ -60,6 +60,7 @@
         font-size: 0.85rem;
         vertical-align: top;
         flex-wrap: wrap;
+        align-items: center;
         gap: 0.7rem;
 
         .input-wrapper {
@@ -88,10 +89,10 @@
 
       &__label {
         width: 3.25rem;
-        padding-top: 0.25rem;
 
         @media (min-width: $min-small-width) {
           min-width: 0;
+          padding-top: 0.25rem;
         }
       }
     }
@@ -411,6 +412,7 @@
         width: 100%;
         height: 100%;
         margin-top: 0.7rem;
+        align-items: center;
 
         .input-wrapper {
           width: calc(100% - 3.95rem);
@@ -442,10 +444,10 @@
 
       &__label {
         width: 3.25rem;
-        padding-top: 0.25rem;
 
         @media (min-width: $min-small-width) {
           min-width: 0;
+          padding-top: 0.25rem;
         }
       }
 
