--- a/src/assets/scss/setup/font.scss
+++ b/src/assets/scss/setup/font.scss
@@ -1,20 +1,6 @@
 @font-face {
-  font-family: 'SCDream';
+  font-family: 'Pretendard-Regular';
   font-style: normal;
   font-weight: 400;
-  src: local('SCDream'), url('@/assets/scss/fonts/SCDreamRegular.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'SCDream';
-  font-style: normal;
-  font-weight: 600;
-  src: local('SCDream'), url('@/assets/scss/fonts/SCDreamMedium.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'SCDream';
-  font-style: normal;
-  font-weight: 700;
-  src: local('SCDream'), url('@/assets/scss/fonts/SCDreamBold.woff2') format('woff2');
+  src: local('SCDream'), url('@/assets/scss/fonts/Pretendard-Regular.woff') format('woff');
 }
