--- a/src/assets/scss/setup/variables.scss
+++ b/src/assets/scss/setup/variables.scss
@@ -38,14 +38,14 @@ $input-height: 1.9rem;
 /* font */
 $default-font: -apple-system, BlinkMacSystemFont, 'Roboto', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande', Arial, sans-serif !default;
 $default-font02: Monaco, Consolas, 'Lucida Console', monospace !default;
-$default-font03: 'SCDream' !default;
+$default-font03: 'Pretendard-Regular' !default;
 $icon-font: 'xeicon' !default;
 
 /* color */
-$main-color: #ce5050 !default; // 주 배경색상
+$main-color: #ce5050 !default;    // 주 배경색상
 $sub-color01: #facfcf !default;
 $sub-color02: #f74545 !default;
-$sub-color03: #c44 !default; // 주 텍스트색상
+$sub-color03: #c44 !default;      // 주 텍스트색상
 $sub-color04: #f07178 !default;
 $sub-color05: #ec9597 !default;
 $sub-color06: #c76060 !default;
