위젯 사이드바 기능 개선

--- a/src/assets/scss/components/sidebar.scss
+++ b/src/assets/scss/components/sidebar.scss
@@ -88,6 +88,10 @@
         }
       }
 
+      &--disable {
+        opacity: 0.5;
+      }
+
       .widget {
         position: relative;
         z-index: 1;
