--- a/src/assets/scss/components/sidebar.scss
+++ b/src/assets/scss/components/sidebar.scss
@@ -1,4 +1,4 @@
-.sidebar {
+:deep(.sidebar) {
   min-height: 20rem;
 
   &__item {
@@ -108,23 +108,9 @@
           padding: 0;
           border-radius: 50%;
           background-color: $green03;
-          font-size: 1.1rem;
           color: $grey12;
           align-items: center;
           justify-content: center;
-
-          &:before {
-            content: "\e929";
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            font-family: $icon-font;
-          }
       
           &--disabled {
             background-color: $grey09;
