--- a/src/assets/scss/components/notice.scss
+++ b/src/assets/scss/components/notice.scss
@@ -31,10 +31,14 @@
           display: block;
           position: relative;
           width: 50%;
+          min-width: 0;
           padding: 0.5rem;
           background-color: transparent;
+          box-shadow: none;
+          text-shadow: none;
           font-weight: 700;
           font-size: 0.85rem;
+          line-height: inherit;
           box-sizing: border-box;
     
           @media (min-width: $min-medium-width) {
