--- a/src/assets/scss/components/post-reply-list.scss
+++ b/src/assets/scss/components/post-reply-list.scss
@@ -149,8 +149,14 @@
         button {
           display: flex;
           width: 100%;
+          min-width: 0;
+          height: auto;
+          padding: 0;
           background-color: transparent;
+          box-shadow: none;
+          text-shadow: none;
           font-size: 0.8rem;
+          line-height: inherit;
           align-items: center;
           gap: 0.3rem;
         }
