--- a/src/assets/scss/setup/variables.scss
+++ b/src/assets/scss/setup/variables.scss
@@ -1,4 +1,4 @@
-/* 레이아웃 */
+// 레이아웃
 $layout-general-width: 1400px !default;
 $layout-wide-width: 1920px !default;
 $layout-responsive-width: 90% !default;
