--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3,8 +3,6 @@
  * vue.config.js 파일의 additionalData 옵션에 기재하지 않는다.
  */
 
-/* 공통 스타일 */
-
 // // 변수
 // @import './setup/variables.scss';
 // // mixin
@@ -24,9 +22,7 @@
 // 인쇄화면
 @import './basics/print.scss';
 
-/* 컴포넌트 스타일 */
-
-// Form
+// Form 컴포넌트
 @import './components/form.scss';
-// 페이지 레이아웃
+// 페이지 레이아웃 컴포넌트
 @import './components/page.scss';
