--- a/src/assets/scss/components/notice.scss
+++ b/src/assets/scss/components/notice.scss
@@ -50,6 +50,18 @@
             color: $grey12;
             text-shadow: rgba(0, 0, 0, 0.8) 1px 1px 0.1em;
             box-shadow: rgba(0, 0, 0, 0.1) 0 0.25rem 0.75rem;
+
+            .count {
+              color: inherit;
+            }
+          }
+
+          .count {
+            content: attr(data-count);
+            margin-left: 0.25rem;
+            color: $sub-color03;
+            font-weight: 400;
+            font-size: 0.8rem;
           }
         }
       }
