임시 주석 추가

--- a/src/assets/scss/components/sidebar.scss
+++ b/src/assets/scss/components/sidebar.scss
@@ -1,4 +1,5 @@
-:deep(.sidebar) {
+// 2023.09.16. :deep(.sidebar)로 변경 시, .sidebar에 스타일 적용되지 않음. 추후 리팩토링
+.sidebar {
   min-height: 20rem;
 
   &__item {
