--- a/src/assets/scss/setup/font.scss
+++ b/src/assets/scss/setup/font.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Pretendard-Regular';
-  font-style: normal;
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
-  src: local('SCDream'), url('@/assets/scss/fonts/Pretendard-Regular.woff') format('woff');
+  font-style: normal;
 }
