--- a/src/assets/scss/views/error.scss
+++ b/src/assets/scss/views/error.scss
@@ -1,6 +1,20 @@
 .error {
+  &__wrapper {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
   &__message {
-    line-height: 1.7;
+    width: 100%;
     text-align: center;
+  }
+  
+  &__title {
+    font-size: 1.2rem;
+  }
+  
+  &__text {
+    line-height: 1.7;
   }
 }
