미사용 SCSS 변수 삭제

--- a/src/assets/scss/basics/base.scss
+++ b/src/assets/scss/basics/base.scss
@@ -16,7 +16,7 @@ body {
   position: relative;
   background-color: $grey07;
   image-rendering: -webkit-optimize-contrast;
-  font-family: $default-font03;
+  font-family: $default-font;
   font-style: normal;
   font-weight: 400;
   letter-spacing: -0.01em;
