--- a/src/assets/scss/setup/variables.scss
+++ b/src/assets/scss/setup/variables.scss
@@ -36,9 +36,7 @@ $min-tiny-width: ($tiny-width / 16) + 0em !default;
 $input-height: 1.9rem;
 
 /* font */
-$default-font: -apple-system, BlinkMacSystemFont, 'Roboto', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande', Arial, sans-serif !default;
-$default-font02: Monaco, Consolas, 'Lucida Console', monospace !default;
-$default-font03: 'Pretendard-Regular' !default;
+$default-font: 'Pretendard-Regular' !default;
 $icon-font: 'xeicon' !default;
 
 /* color */
