--- a/src/assets/scss/basics/ui.scss
+++ b/src/assets/scss/basics/ui.scss
@@ -82,7 +82,7 @@
 // Vue Datepicker
 input.dp__input {
   padding-left: 1.75rem;
-  font-family: $default-font03;
+  font-family: $default-font;
   font-size: 0.8rem;
 }
 
