--- a/src/assets/scss/components/sidebar.scss
+++ b/src/assets/scss/components/sidebar.scss
@@ -32,7 +32,7 @@
             display: block;
             width: 100%;
             height: 100%;
-            font-family: $default-font03;
+            font-family: $default-font;
             font-size: 0.85rem;
           }
         }
