--- a/src/assets/scss/views/archive.scss
+++ b/src/assets/scss/views/archive.scss
@@ -1,5 +1,16 @@
 :deep(.category) {
+  &__desc {
+    padding: 0.8rem;
+    font-size: 0.9rem;
+    background-color: $grey02;
+
+    p {
+      margin: 0;
+    }
+  }
+
   &__list {
+    margin-top: 1.5rem;
     padding-left: 1.5rem;
 
     @media (min-width: $min-minimal-width) {
