포스트 리스트 항목 UI 개선

--- a/src/assets/scss/components/post-list-detail.scss
+++ b/src/assets/scss/components/post-list-detail.scss
@@ -163,8 +163,9 @@
       }
 
       > a {
-        display: inline-block;
+        display: block;
         font-size: inherit;
+        @include ellipsis;
 
         @media (min-width: $min-large-width) {
           &:hover {
