--- a/src/assets/scss/components/file-info.scss
+++ b/src/assets/scss/components/file-info.scss
@@ -7,7 +7,7 @@
       gap: 0.5rem;
     }
 
-    &__txt {
+    &__text {
       display: block;
       margin-bottom: 0.5rem;
       padding: 0.35rem 0.5rem;
