--- a/src/assets/scss/views/search.scss
+++ b/src/assets/scss/views/search.scss
@@ -120,7 +120,7 @@
       margin: 0 0 1rem 0;
       line-height: 1.5;
   
-      &__txt {
+      &__text {
         &:first-of-type {
           color: $sub-color03;
           box-shadow: inset rgba(206,80,80,0.2) 0 -0.4em 0;
