--- a/src/assets/scss/views/program-modal.scss
+++ b/src/assets/scss/views/program-modal.scss
@@ -4,6 +4,7 @@
       &__inputs {
         display: flex;
         flex-wrap: wrap;
+        margin-bottom: 1rem;
         
         @media (min-width: $min-small-width) {
           width: auto;
@@ -57,8 +58,10 @@
       }
 
       &__btns {
+        display: flex;
         width: 100%;
         margin-top: 0.7rem;
+        gap: 0.5rem;
   
         @media (min-width: $min-small-width) {
           width: auto;
