프로그램 등록/수정 모달 반응형 작업

--- a/src/assets/scss/setup/variables.scss
+++ b/src/assets/scss/setup/variables.scss
@@ -15,6 +15,7 @@ $standard-width: 1420 !default;
 $large-width: 1200 !default;
 $big-width: 1024 !default;
 $medium-width: 768 !default;
+$middle-width: 640 !default;
 $small-width: 560 !default;
 $minimal-width: 480 !default;
 $mini-width: 380 !default;
@@ -27,6 +28,7 @@ $min-standard-width: ($standard-width / 16) + 0em !default;
 $min-large-width: ($large-width / 16) + 0em !default;
 $min-big-width: ($big-width / 16) + 0em !default;
 $min-medium-width: ($medium-width / 16) + 0em !default;
+$min-middle-width: ($middle-width / 16) + 0em !default;
 $min-small-width: ($small-width / 16) + 0em !default;
 $min-minimal-width: ($minimal-width / 16) + 0em !default;
 $min-mini-width: ($mini-width / 16) + 0em !default;
