--- a/src/assets/scss/views/program-modal.scss
+++ b/src/assets/scss/views/program-modal.scss
@@ -6,7 +6,7 @@
         flex-wrap: wrap;
         margin-bottom: 1rem;
         
-        @media (min-width: $min-small-width) {
+        @media (min-width: $min-middle-width) {
           width: auto;
           margin-top: 1rem;
         }
@@ -24,7 +24,7 @@
         &.no-width {
           display: block;
 
-          @media (min-width: $min-small-width) {
+          @media (min-width: $min-middle-width) {
             display: inline-flex;
             flex-wrap: wrap;
             gap: 0.7rem;
@@ -33,15 +33,19 @@
         
         &:not(.no-width) {
           .input-wrapper {
-            width: calc(100% - 3.95rem);
+            width: 100%;
+
+            .input-field {
+              width: 100%;
+            }
   
-            @media (min-width: $min-small-width) {
+            @media (min-width: $min-middle-width) {
               width: auto;
             }
           }
         }
 
-        @media (min-width: $min-small-width) {
+        @media (min-width: $min-middle-width) {
           width: auto;
           margin-top: 0;
           margin-right: 0.7rem;
@@ -51,7 +55,7 @@
       &__label {
         padding-top: 0.25rem;
 
-        @media (min-width: $min-small-width) {
+        @media (min-width: $min-middle-width) {
           min-width: 0;
         }
       }
@@ -62,7 +66,7 @@
         margin-top: 0.7rem;
         gap: 0.5rem;
   
-        @media (min-width: $min-small-width) {
+        @media (min-width: $min-middle-width) {
           width: auto;
           margin-top: 0;
         }
@@ -73,7 +77,7 @@
       display: block;
       width: 100%;
       
-      @media (min-width: $min-small-width) {
+      @media (min-width: $min-middle-width) {
         width: 6rem;
       }
   
@@ -86,7 +90,41 @@
       &--write {
         width: 100%;
         
-        @media (min-width: $min-small-width) {
+        @media (min-width: $min-middle-width) {
+          width: auto;
+        }
+      }
+    }
+
+    &__grid-desc {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 0.5rem;
+      margin-bottom: 0.75rem;
+      flex-wrap: wrap;
+
+      @media (min-width: $min-minimal-width) {
+        flex-wrap: nowrap;
+      }
+
+      &__text {
+        width: 100%;
+        margin-top: 0;
+        margin-bottom: 0;
+        font-size: 0.85rem;
+
+        @media (min-width: $min-minimal-width) {
+          width: auto;
+        }
+      }
+
+      &__btns {
+        display: flex;
+        gap: 0.5rem;
+        width: 100%;
+
+        @media (min-width: $min-minimal-width) {
           width: auto;
         }
       }
