--- a/src/assets/scss/views/blog-config.scss
+++ b/src/assets/scss/views/blog-config.scss
@@ -1,56 +1,166 @@
-.blog-config {
-   &__frm {
-      > table {
-         margin-top: 0;
-      }
-
-      textarea {
-         resize: vertical;
-      }
-
-      input {
-         &[type="number"] {
+.blog-config__wrapper:deep {
+   .blog-config {
+      &__save {
+         &-wrapper {
+            position: absolute;
+            bottom: calc(100% + 1rem);
+            right: 0;
+            z-index: 999;
             width: 100%;
-
-            @media (min-width: $min-mini-width) {
-               width: 4.5rem;
+            text-align: right;
+   
+            @media (min-width: $min-small-width) {
+               float: right;
+               position: sticky;
+               top: 3rem;
+               width: auto;
+               margin-top: -3rem;
+               margin-bottom: 1rem;
             }
          }
-      }
-   }
-
-   &__satisfaction {
-      > li {
-         line-height: 1;
-
-         ~ li {
-            margin-top: 0.3rem;
-         }
-
-         p {
-            display: inline-block;
-            position: relative;
-            margin: 0.4rem 0.5rem 0.4rem 0;
-            padding-right: 0.7rem;
-            vertical-align: middle;
-
-            &:not(:last-child) {
-               &:before {
-                  content: "";
+   
+         &-list {
+            overflow-y: auto;
+            position: absolute;
+            top: calc(100% + 1.9rem);
+            right: 0;
+            width: 100%;
+            max-height: 11.3rem;
+            margin: 0;
+            padding: 0.7rem;
+            background-color: $grey12;
+            box-sizing: border-box;
+            box-shadow: rgba(0,0,0,0.2) 0 0.25rem 0.75rem;
+            list-style: none;
+            text-align: left;
+   
+            @media (min-width: $min-mini-width) {
+               max-height: 10rem;
+            }
+   
+            @media (min-width: $min-small-width) {
+               width: 25rem;
+            }
+   
+            > li {
+               font-size: 0.75rem;
+               @include clearfix;
+   
+               + li {
+                  margin-top: 0.5rem;
+               }
+   
+               > a {
                   display: inline-block;
-                  position: absolute;
-                  top: 2px;
-                  right: 0;
-                  width: 1px;
-                  height: 0.8rem;
-                  background-color: $grey05;
+                  vertical-align: middle;
+   
+                  @media (min-width: $min-mini-width) {
+                     max-width: calc(100% - 9rem);
+                     @include ellipsis;
+                  }
+               }
+            }
+   
+            &__delete {
+               display: inline-flex;
+               justify-content: center;
+               align-items: center;
+               min-width: 0;
+               width: 0.8rem;
+               height: 0.8rem;
+               margin-right: 0.5rem;
+               padding: 0;
+               border: 0;
+               border-radius: 50%;
+               font-size: 0.8rem;
+               line-height: 1;
+               text-shadow: none;
+            }
+   
+            &__date {
+               display: block;
+               margin-top: 0.25rem;
+   
+               @media (min-width: $min-mini-width) {
+                  float: right;
+                  margin-top: 0;
                }
             }
          }
-
-         a {
-            color: $sub-color03;
-            text-decoration: underline;
+      }
+   
+      &__btn {
+         display: block;
+         width: 100%;
+   
+         @media (min-width: $min-mini-width) {
+            display: inline-block;
+            width: auto;
+         }
+   
+         &--load {
+            min-width: 0;
+            width: 3rem;
+            height: 3rem;
+            line-height: 1.3;
+            border-radius: 50%;
+            font-size: 0.8rem;
+         }
+      }
+   
+      &__frm {
+         > table {
+            margin-top: 0;
+         }
+   
+         textarea {
+            resize: vertical;
+         }
+   
+         input {
+            &[type="number"] {
+               width: 100%;
+   
+               @media (min-width: $min-mini-width) {
+                  width: 4.5rem;
+               }
+            }
+         }
+      }
+   
+      &__satisfaction {
+         > li {
+            line-height: 1;
+   
+            ~ li {
+               margin-top: 0.3rem;
+            }
+   
+            p {
+               display: inline-block;
+               position: relative;
+               margin: 0.4rem 0.5rem 0.4rem 0;
+               padding-right: 0.7rem;
+               vertical-align: middle;
+   
+               &:not(:last-child) {
+                  &:before {
+                     content: "";
+                     display: inline-block;
+                     position: absolute;
+                     top: 2px;
+                     right: 0;
+                     width: 1px;
+                     height: 0.8rem;
+                     background-color: $grey05;
+                  }
+               }
+            }
+   
+            a {
+               color: $sub-color03;
+               text-decoration: underline;
+            }
          }
       }
    }
