블로그 환경설정 사용 여부 수정 기능 구현

--- a/src/assets/scss/views/blog-config.scss
+++ b/src/assets/scss/views/blog-config.scss
@@ -64,6 +64,7 @@
                }
             }
    
+            &__use,
             &__delete {
                display: inline-flex;
                justify-content: center;
@@ -78,6 +79,11 @@
                font-size: 0.8rem;
                line-height: 1;
                text-shadow: none;
+            }
+
+            &__use {
+               background-color: $green03;
+               color: $grey12;
             }
 
             &__add {
