메뉴 펼침 아이콘 표출 개선

--- a/src/assets/scss/components/menu.scss
+++ b/src/assets/scss/components/menu.scss
@@ -135,6 +135,14 @@
             align-items: center;
           }
         }
+
+        &.gnb__list__item--active {
+          > a {
+            &:after {
+              content: "\e944";
+            }
+          }
+        }
       }
 
       &--active,
