카테고리/태그 관리 버튼 추가

--- a/src/assets/scss/views/archive.scss
+++ b/src/assets/scss/views/archive.scss
@@ -1,4 +1,10 @@
 :deep(.category) {
+  &__btns {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: end;
+  }
+  
   &__desc {
     padding: 0.8rem;
     font-size: 0.9rem;
