--- a/src/assets/scss/views/guestbook-modal.scss
+++ b/src/assets/scss/views/guestbook-modal.scss
@@ -68,15 +68,18 @@
     }
     
     &__input {
-      display: block;
-      width: 100%;
-      
-      @media (min-width: $min-small-width) {
-        width: 6rem;
-      }
-  
-      @media (min-width: $min-medium-width) {
-        width: 7rem;
+      > input[type="text"],
+      > input[type="password"] {
+        display: block;
+        width: 100%;
+        
+        @media (min-width: $min-small-width) {
+          width: 6rem;
+        }
+    
+        @media (min-width: $min-medium-width) {
+          width: 7rem;
+        }
       }
     }
 
