--- a/src/assets/scss/components/satisfaction.scss
+++ b/src/assets/scss/components/satisfaction.scss
@@ -105,10 +105,12 @@
     }
   
     &__comment {
-      width: 100%;
-      border: 0;
-      border-bottom: 1px solid $grey06;
-      background-color: transparent;
+      > input[type="text"] {
+        width: 100%;
+        border: 0;
+        border-bottom: 1px solid $grey06;
+        background-color: transparent;
+      }
     }
   
     &__btn {
