--- a/src/assets/scss/views/blog-config.scss
+++ b/src/assets/scss/views/blog-config.scss
@@ -105,7 +105,9 @@
             }
 
             &__nm {
-               width: 100%;
+               > input[type="text"] {
+                  width: 100%;
+               }
             }
    
             &__date {
