--- a/src/assets/scss/views/search.scss
+++ b/src/assets/scss/views/search.scss
@@ -73,16 +73,18 @@
     }
   
     &__option {
-      width: 100%;
-      height: 100%;
-      border: 0;
-      background: none;
-      line-height: $search-field-height;
-      font-size: 0.85rem;
-      color: $black05;
-  
-      @media (min-width: $min-small-width) {
-        font-size: 0.9rem;
+      > select {
+        width: 100%;
+        height: 100%;
+        border: 0;
+        background: none;
+        line-height: $search-field-height;
+        font-size: 0.85rem;
+        color: $black05;
+    
+        @media (min-width: $min-small-width) {
+          font-size: 0.9rem;
+        }
       }
     }
   
