퀵검색 UI 틀어짐 수정

--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -194,6 +194,7 @@
 
     &__quick-search {
       margin-top: 2rem;
+      text-align: center;
 
       input[type="search"] {
         border-radius: 1rem;
