일부 데이터 로딩시 스켈레톤 UI 표출하도록 개선

--- a/src/assets/scss/components/year.scss
+++ b/src/assets/scss/components/year.scss
@@ -73,7 +73,11 @@
       padding: 1rem 1.35rem;
     }
 
-    > li {
+    ul {
+      margin: 0;
+    }
+
+    li {
       padding: 0.75rem 0.25rem;
 
       + li {
